crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_constant_force_half.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
assertion_line: 35
expression: "format!(\"{:?}\", out)"
---
[18, 1, 136, 19]
