crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_constant_force_neg_one.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
assertion_line: 11
expression: "format!(\"{:?}\", out)"
---
[18, 1, 240, 216]
