crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_dfex_no_range_command.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
expression: "format!(\"DrivingForceEX.supports_range_command() = {}\",\nlg::LogitechModel::DrivingForceEX.supports_range_command())"
---
DrivingForceEX.supports_range_command() = false
