crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_dfp_range_270.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
expression: "format!(\"coarse: {:02X?}\\nfine:   {:02X?}\", coarse, fine)"
---
coarse: [F8, 03, 00, 00, 00, 00, 00]
fine:   [81, 0B, 59, A6, FF, 4A, FF]
