crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_dfp_range_40_min_clamp.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
expression: "format!(\"coarse: {:02X?}\\nfine:   {:02X?}\", coarse, fine)"
---
coarse: [F8, 02, 00, 00, 00, 00, 00]
fine:   [81, 0B, 66, 99, FF, 0E, FF]
