crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_g25_supports_hardware_friction.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
expression: "format!(\"G25.supports_hardware_friction() = {}\",\nlg::LogitechModel::G25.supports_hardware_friction())"
---
G25.supports_hardware_friction() = true
