crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_g29_no_hardware_friction.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
expression: "format!(\"G29.supports_hardware_friction() = {}\",\nlg::LogitechModel::G29.supports_hardware_friction())"
---
G29.supports_hardware_friction() = false
