crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_g920_supports_range_command.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
expression: "format!(\"G920.supports_range_command() = {}\",\nlg::LogitechModel::G920.supports_range_command())"
---
G920.supports_range_command() = true
