crates/hid-logitech-protocol/tests/snapshots/snapshot_tests__snapshot_gain_full.snap
---
source: crates/hid-logitech-protocol/tests/snapshot_tests.rs
assertion_line: 99
expression: "format!(\"{:?}\", r)"
---
[22, 255]
